# zk-orderbook-dex

./: .gitignore  Cargo.toml  Justfile  README.md  rust-toolchain.toml
asset_manager/: Scarb.toml
asset_manager/src/: asset_manager.cairo  lib.cairo
host/: Cargo.toml
host/src/: cli.rs  executor.rs  host.rs  main.rs
match-engine/src/: engine.rs  lib.rs  parser.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
