[workspace]
resolver = "2"
members = ["host", "match-engine", "methods"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
codegen-units = 1
debug = false
overflow-checks = false
lto = true

[profile.release.build-override]
opt-level = 3
