[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
match-engine = { path = "../match-engine" }
risc0-zkvm = { version = "0.19.1" }
env_logger = "0.11.0"
serde = "1.0.195"
clap = { version = "4.4.18", features = ["derive"] }

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
